# convertor

./: .gitignore  .gitlab-ci.yml  .vulture-whitelist  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/: __main__.py  config.py  main.py
src/boilerplate/: __main__.py  service.py
src/boilerplate/routers/: root.py
src/config/: app.py  currency.py
src/currency/: __main__.py  currencyController.py  currencyService.py  service.py
src/currency/dto/: currency.py  currencyRequest.py  currencyResponse.py
src/currency/routers/: convertor.py
tests/unit/: test_boilerplate.py
