[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "A boilerplate microservice"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
brotli-asgi = "^1.1.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.961"
flake8 = "^4.0.1"
vulture = "^2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
