[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "A boilerplate microservice"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
brotli-asgi = "^1.1.0"
uvicorn = "^0.18.2"
pydantic = "^1.10.4"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
