[tool.poetry]
name = "currency"
version = "0.1.0"
description = "A currency converter microservice"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
brotli-asgi = "^1.1.0"
uvicorn = "^0.18.2"
pydantic = "^2.0.0"
requests = "^2.31.0"
fastapi-router-controller = "^0.5.0"
simple-cache = "^0.35"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
